--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
 	"license": "MIT",
 	"scripts": {
 		"ng": "ng",
-		"start": "ng serve --open",
-		"build": "ng build --prod --verbose",
+		"start": "ng serve",
 		"test": "ng test",
 		"lint": "ng lint",
 		"e2e": "ng e2e",
-		"docs": "ng build --configuration=docs --base-href /angular-spin/ --deploy-url /angular-spin/"
+		"build": "ng build browser --output-hashing=media",
+		"build:browser": "ng build browser --output-hashing=media",
+		"build:server": "ng build server --output-hashing=media",
+		"build:production": "ng build server --prod --output-hashing=media --verbose",
+		"build:docs": "ng build docs --configuration=docs --base-href /angular-spin/ --deploy-url /angular-spin/"
 	},
 	"private": true,
 	"dependencies": {
@@ -21,14 +24,20 @@
 		"@angular/http": "6.0.0",
 		"@angular/platform-browser": "6.0.0",
 		"@angular/platform-browser-dynamic": "6.0.0",
+		"@angular/platform-server": "6.0.0",
 		"@angular/router": "6.0.0",
+		"@nguniversal/aspnetcore-engine": "6.0.0",
+		"@nguniversal/common": "6.0.0",
+		"@nguniversal/module-map-ngfactory-loader": "6.0.0",
 		"@ngx-translate/core": "^10.0.1",
 		"@ngx-translate/http-loader": "^3.0.1",
 		"angular-in-memory-web-api": "~0.5.0",
+		"aspnet-prerendering": "^3.0.1",
 		"bootstrap": "^4.1.1",
 		"core-js": "^2.4.1",
 		"json-formatter-js": "^2.2.0",
 		"open-sans-fontface": "^1.4.0",
+		"preboot": "^6.0.0-beta.4",
 		"primeng": "^5.2.6",
 		"rxjs": "^6.1.0",
 		"rxjs-compat": "^6.1.0",
