--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@angular/platform-browser-dynamic": "6.0.0",
 		"@angular/platform-server": "6.0.0",
 		"@angular/router": "6.0.0",
+		"@fancyapps/fancybox": "^3.3.5",
 		"@nguniversal/aspnetcore-engine": "6.0.0",
 		"@nguniversal/common": "6.0.0",
 		"@nguniversal/module-map-ngfactory-loader": "6.0.0",
@@ -35,8 +36,10 @@
 		"aspnet-prerendering": "^3.0.1",
 		"bootstrap": "^4.1.1",
 		"core-js": "^2.4.1",
+		"jquery": "^3.3.1",
 		"json-formatter-js": "^2.2.0",
 		"mapbox-gl": "^0.45.0",
+		"ngx-swiper-wrapper": "^6.2.1",
 		"open-sans-fontface": "^1.4.0",
 		"preboot": "^6.0.0-beta.4",
 		"primeng": "^5.2.6",
