--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"aspnet-prerendering": "^3.0.1",
 		"bootstrap": "^4.1.1",
 		"core-js": "^2.4.1",
+		"intersection-observer": "^0.5.0",
 		"jquery": "^3.3.1",
 		"json-formatter-js": "^2.2.0",
 		"mapbox-gl": "^0.45.0",
