--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
 		"zone.js": "^0.8.26"
 	},
 	"devDependencies": {
+		"@angular-devkit/build-angular": "~0.6.0",
 		"@angular/cli": "^6.0.0",
 		"@angular/compiler-cli": "6.0.0",
 		"@angular/language-service": "6.0.0",
 		"@types/jasmine": "~2.8.3",
 		"@types/jasminewd2": "~2.0.2",
+		"@types/jquery": "^3.3.4",
 		"@types/node": "~6.0.60",
 		"codelyzer": "^4.0.1",
 		"jasmine-core": "~2.8.0",
@@ -67,7 +69,6 @@
 		"protractor": "~5.1.2",
 		"ts-node": "~4.1.0",
 		"tslint": "~5.9.1",
-		"typescript": "2.7.2",
-		"@angular-devkit/build-angular": "~0.6.0"
+		"typescript": "2.7.2"
 	}
 }
