--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compileOnSave": false,
 	"compilerOptions": {
+		"module": "commonJs",
 		"outDir": "./dist/out-tsc",
 		"sourceMap": true,
 		"declaration": false,
