--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"e2e": "ng e2e",
 		"build": "ng build browser --output-hashing=media",
 		"build:browser": "ng build browser --output-hashing=media",
-		"build:server": "ng build server --output-hashing=media",
+		"build:server": "ng build server --prod --output-hashing=media",
 		"build:production": "ng build server --prod --output-hashing=media --verbose",
 		"build:docs": "ng build docs --configuration=docs --base-href /angular-spin/ --deploy-url /angular-spin/"
 	},
@@ -57,6 +57,7 @@
 		"@types/jasmine": "~2.8.3",
 		"@types/jasminewd2": "~2.0.2",
 		"@types/jquery": "^3.3.4",
+		"@types/mapbox-gl": "^0.45.2",
 		"@types/node": "~6.0.60",
 		"codelyzer": "^4.0.1",
 		"jasmine-core": "~2.8.0",
