--- a/angular.json
+++ b/angular.json
@@ -124,7 +124,7 @@
 						"outputPath": "dist/server",
 						"main": "src/main.server.ts",
 						"tsConfig": "src/tsconfig.server.json",
-						"bundleDependencies": "all"
+						"bundleDependencies": "none"
 					},
 					"configurations": {
 						"production": {
