--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
 							"src/assets",
 							"src/favicon.ico"
 						],
+						"extractCss": true,
 						"styles": [
               				"src/styles.scss"
 						],
@@ -172,6 +173,7 @@
 							"src/assets",
 							"src/favicon.ico"
 						],
+						"extractCss": true,
 						"styles": [
               				"src/styles.scss"
             			],
