--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 		"e2e": "ng e2e",
 		"build": "ng build browser --output-hashing=media",
 		"build:browser": "ng build browser --output-hashing=all",
-		"build:server": "ng build server --prod --output-hashing=media",
+		"build:server": "ng build server --prod --output-hashing=media && npm run dependency:fix",
 		"build:production": "ng build server --prod --output-hashing=media --verbose",
-		"build:docs": "ng build docs --configuration=docs --base-href /angular-spin/ --deploy-url /angular-spin/"
+		"build:docs": "ng build docs --configuration=docs --base-href /angular-spin/ --deploy-url /angular-spin/",
+		"dependency:fix": "node -e \"require('./dist/replace.js')('./dist/server/main.js', new RegExp('angular-in.memory-web-api(.[^\\\"]*)', 'gm'), 'angular-in-memory-web-api')\"",
+		"debug:server": "node -e \"console.log(require('./dist/server/main.js').default((e, result) => console.log('error', e, 'result', result !== null), '/', {}, 'http://localhost:40000/', '/', { originalHtml: '<app-component></app-component>' }))\""
 	},
 	"private": true,
 	"dependencies": {
